--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -57,17 +57,17 @@
         <ul class="object-tools">
           {% block object-tools-items %}
             <li>
-              <a href="/trades/direct/add/?type=direct" class="addlink" target="_blank">
+              <a href="/trades/direct/?type=direct" class="addlink" target="_blank">
                 新内售单
               </a>
             </li>
             <li>
-              <a href="/trades/direct/add/?type=reissue" class="addlink" target="_blank">
+              <a href="/trades/direct/?type=reissue" class="addlink" target="_blank">
                 新补发单
               </a>
             </li>
             <li>
-              <a href="/trades/exchange/add/" class="addlink" target="_blank">
+              <a href="/trades/exchange/" class="addlink" target="_blank">
                 新退换货单
               </a>
             </li>
