--- a/shopmanager/shopback/trades/templates/trades/trade_fenxiao_detail.html
+++ b/shopmanager/shopback/trades/templates/trades/trade_fenxiao_detail.html
@@ -1,42 +1,21 @@
 <html>
- <head>
+<head>
     {% block title %} {% endblock %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css">
 
     {% block head_script %} {% endblock %}
-  </head> 
- 
+</head>
 <body>
 <div style="width:800px; padding:5px;">
-<form id="form1" action="/trades/fenxiao/count/" method="post">
-startDate
-<input type="text" name="fromDate">
-endDate
-<input type="text" name="endDate">
-<input type="submit" value="submit" onclick="submit()">
-</form>
-</div>
-
-<div style="width:800px; padding:5px;">
 <table class="table table-striped table-bordered table-condensed">
-<thead>
 <tr>
-<th>fenxiao_user</td>
-<th>interval_cast</td>
+<td>id<td><td>tid</td><td>收货人</td><td>联系方式</td><td>地址</td><td>金额</td>
 </tr>
-</thead>
-<tbody>
-{% for key in data %}
 <tr>
-<td>{{ key.0 }}</td><td>{{ key.1 }}</td>
+<td></td><td></td><td></td><td></td><td></td><td></td>
 </tr>
-{% endfor %}
-<tr>
-
-</tr>
-</tbody>
 </table>
 </div>
 </body>
