--- a/shopmanager/shopback/trades/templates/trades/trade_fenxiao_detail.html
+++ b/shopmanager/shopback/trades/templates/trades/trade_fenxiao_detail.html
@@ -8,14 +8,22 @@
     {% block head_script %} {% endblock %}
 </head>
 <body>
-<div style="width:800px; padding:5px;">
-<table class="table table-striped table-bordered table-condensed">
+<div style="width:800px; padding:5px;margin:0px auto; text-align:center;">
+<table class="table table-striped table-bordered table-condensed ">
 <tr>
-<td>id<td><td>tid</td><td>收货人</td><td>联系方式</td><td>地址</td><td>金额</td>
+<td style="word-break:keep-all;">id</td><td>tid</td>
+<td style="word-break:keep-all;">收货人</td>
+<td style="word-break:keep-all;">联系方式</td>
+<td style="word-break:keep-all;">地址</td><td>金额</td>
 </tr>
+{% for k in fenxiao_render_data %}
 <tr>
-<td></td><td></td><td></td><td></td><td></td><td></td>
+<td>{{ k.0 }}</td><td>{{ k.1 }}</td>
+<td>{{ k.2 }}</td><td>{{ k.3 }}</td>
+<td>{{ k.4 }}{{ k.5 }}{{ k.6 }}{{ k.7 }}</td>
+<td>{{ k.8 }}</td>
 </tr>
+{% endfor %}
 </table>
 </div>
 </body>
