babyinfo, orderinfo ready

--- a/shopmanager/shopapp/weixin/templates/weixin/referal.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/referal.html
@@ -73,25 +73,25 @@
 <div class="panel panel-default" style="margin-top:15px">
   <div class="panel-heading" style="color:orange">我的返利</div>
   <div class="panel-body">
-    <p>返利数额: ￥{{ referal_bonus }} </p>
-    <p>推荐人数: {{ referal_count }}人</p>
-    <p style="color:green">查看详情 >></p>
+    <p style="color:orange">账户余额: ￥<span style="font-size:26px">{{ referal_bonus }}</span> <button class="btn btn-warning" style="float:right;">提现</button></p>
+    <p>一级好友: {{ direct_referal_count }}人</p>
+    <p>二级好友: {{ indirect_referal_count }}人</p>
   </div>
 </div>
 
 
   <div class="row">
     <div class="col-xs-12">
-      <h5 style="color:#3071a9">好友优惠</h5>
-      <p>因为您的推荐，您的好友在第一次购买时会得到额外的<font style="color:red">立减10元</font>优惠。</p>
+      <h5 style="color:#3071a9">晒单返利</h5>
+      <p>购买后晒单到朋友圈，可得到额外的<font style="color:red">返利5元</font>奖励。</p>
     </div>
     <div class="col-xs-12">
       <h5 style="color:#3071a9">推荐返利</h5>
-      <p>好友每成功购买一次，系统将自动返利到您的账户。返利可微信红包提现哦!</p>
+      <p>成功邀请一个好友，最高可获10元奖励。邀请得多，奖励更多哟！</p>
     </div>
     <div class="col-xs-12">
       <h5 style="color:#3071a9">返利规则</h5>
-      <p style="color:green">了解详细的返利规则，请点击查看 >></p>
+      <p>详细的返利规则，请<a href="/weixin/referalrules/" style="color:green">点击查看 >></a></p>
     </div>
   </div>
   
