--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -17,54 +17,56 @@
     <![endif]-->
 
     <script type="text/javascript">
-      function init() {
-        $("option[value='2008']").attr("selected","selected");
-      };
-      
       function requestcode() {
-        if ($("#"+"id_mobile_input").attr("status") == "1") {
+        var btn = $("#id_requestcode_button");
+        if (btn.attr("status") == "1") {
           return;
         }
-        var mobile = $("#"+"id_mobile_input").val();
+        console.log(btn);
+        var mobile = $("#id_mobile_input").val();
         var url = "/weixin/requestcode/"+mobile+"/";
 
         var callback = function (res) {
-          var btn = document.getElementById("id_requestcode_button");
-          btn.innerHTML="已发送";
+          btn.attr("status","1")[0].innerHTML = "已发送";
         };
         $.ajax({url:url, success:callback});
       };
       function verifycode() {
-        var code = $("#"+"id_code_input").val();
+        var code = $("#id_code_input").val();
         var url = "/weixin/verifycode/"+code+"/";
         var callback = function (res) {
-          $("#"+"id_verifycode_group")[0].innerHTML = '';
-          $("#"+"id_requestcode_button").removeClass("btn-primary").addClass("btn-success")[0].innerHTML="已验证";
-          $("#"+"id_mobile_input").attr("disabled","disabled");
-          $("#"+"id_requestcode_button").attr("status", "1");
+          if (res["code"] == "bad") {
+            $("#id_verifycode_button")[0].innerHTML = "验证失败，刷新再试";
+            return;
+          }
+
+          $("#id_verifycode_group")[0].innerHTML = '';
+          $("#id_requestcode_button").removeClass("btn-primary").addClass("btn-success")[0].innerHTML="已验证";
+          $("#id_mobile_input").attr("disabled","disabled");
+          $("#id_requestcode_button").attr("status", "1");
         };
         $.ajax({url:url, success:callback});
       };
       
       function babyinfo() {
-        if ($("#"+"id_requestcode_button").attr("status") != "1") {
-          $("#"+"id_savelabel")[0].innerHTML = "请先验证手机号！";
+        if ($("#id_requestcode_button").attr("status") != "1") {
+          $("#id_savelabel")[0].innerHTML = "请先验证手机号！";
           return;
         }
-        var year = $("#"+"id_year").val();
-        var month = $("#"+"id_month").val();
-        var sex = $("#"+"id_sex").val();
-        var receiver_name = $("#"+"id_receiver_name").val();
-        var province = $("#"+"id_province").val();
-        var city = $("#"+"id_city").val();
-        var streetaddr = $("#"+"id_streetaddr").val();
+        var year = $("#id_year").val();
+        var month = $("#id_month").val();
+        var sex = $("#id_sex").val();
+        var receiver_name = $("#id_receiver_name").val();
+        var province = $("#id_province").val();
+        var city = $("#id_city").val();
+        var streetaddr = $("#id_streetaddr").val();
 
         if (year == "0" || month == "0" || sex == "0") {
-          $("#"+"id_savelabel")[0].innerHTML = "年月或性别选择错误！！";
+          $("#id_savelabel")[0].innerHTML = "年月或性别选择错误！！";
           return;
         }
         if (receiver_name.length < 2 || province.length < 2 || city.length < 2 || streetaddr.length < 4) {
-          $("#"+"id_savelabel")[0].innerHTML = "输入信息错误,请仔细检查提交！";
+          $("#id_savelabel")[0].innerHTML = "输入信息错误,请仔细检查提交！";
           return;												 
         }
         var csrf_token = document.getElementsByName("csrfmiddlewaretoken")[0].value;
@@ -76,8 +78,8 @@
                     "csrfmiddlewaretoken":csrf_token};
         var callback = function (res) {
           if (res["code"] == "ok") {
-            $("#"+"id_savebutton").css("display", "none");
-            $("#"+"id_savelabel")[0].innerHTML = "信息已成功保存！";
+            $("#id_savebutton").css("display", "none");
+            $("#id_savelabel")[0].innerHTML = "信息已成功保存！";
           }
         };
         $.ajax({url:url, data:data, type:"post", success:callback});
