--- a/shopmanager/shopback/purchases/templates/purchases/purchase_payment_page.html
+++ b/shopmanager/shopback/purchases/templates/purchases/purchase_payment_page.html
@@ -3,7 +3,7 @@
   <head>
     <title>采购付款单</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
     <script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js" type="text/javascript"></script>
     <link href='{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.min.css' rel='stylesheet'  />
