fix refunds template and weixin service

--- a/shopmanager/shopback/refunds/templates/refunds/refund_manager.html
+++ b/shopmanager/shopback/refunds/templates/refunds/refund_manager.html
@@ -107,7 +107,7 @@
 					<thead>
 						<tr>
 						<th>序号</th>
-						<th style="width:140px;">交易ID</th>
+						<th style="width:140px;">原单ID</th>
 						<th>买家昵称</th>
 						<th>手机</th>
 						<th>固话</th>
