--- a/shopmanager/shopback/refunds/templates/refunds/refund_products.html
+++ b/shopmanager/shopback/refunds/templates/refunds/refund_products.html
@@ -123,7 +123,7 @@
 			<div id="id-baseinfo-panel" class="content-base-info">
 				<table id="id-baseinfo-table" class="table table-bordered table-striped table-condensed">
 					<tr>
-						<td>交易ID:</td><td><input type="text" id="id_trade_id" class="simple-text" /></td>
+						<td>原单ID:</td><td><input type="text" id="id_trade_id" class="simple-text" /></td>
 						<td>买家昵称:</td><td><input type="text" id="id_buyer_nick" class="simple-text" /></td>
 						<td>手机:</td><td><input type="text" id="id_receiver_mobile" class="simple-text" /></td>
 						<td>固话:</td><td><input type="text" id="id_receiver_phone" class="simple-text" /></td>
@@ -148,7 +148,7 @@
 							<thead>
 								<tr>
 								<th>序号</th>
-								<th>交易ID</th>
+								<th>原单ID</th>
 								<th>买家昵称</th>
 								<th>手机</th>
 								<th>固话</th>
@@ -198,13 +198,13 @@
 					<thead>
 						<tr>
 						<th style="width:5px;">序号</th>
-						<th>淘宝ID</th>
+						<th>原单ID</th>
 						<th>买家昵称</th>
 						<th>单数</th>
 						<th>付款日期</th>
 						<th>收货人</th>
 						<th style="width:200px;">收货地址及电话</th>
-						<th>淘宝交易状态</th>
+						<th>订单状态</th>
 						<th>系统状态</th>
 						<th>操作</th>
 						</tr>
