--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -17,13 +17,27 @@
     <![endif]-->
 
     <script type="text/javascript">
+      function validateMobile(s) {
+        var validateReg = /^((\+?86)|(\(\+86\)))?1\d{10}$/;
+        return validateReg.test(s);
+      };
+
+      function validateVerifyCode(s) {
+        var validateReg = /^\d{6}$/;
+        return validateReg.test(s);
+      };
+
       function requestcode() {
         var btn = $("#id_requestcode_button");
         if (btn.attr("status") == "1") {
           return;
         }
-        console.log(btn);
+
         var mobile = $("#id_mobile_input").val();
+        if (validateMobile(mobile) == false) {
+          return;
+        }
+
         var url = "/weixin/requestcode/"+mobile+"/";
 
         var callback = function (res) {
@@ -33,6 +47,9 @@
       };
       function verifycode() {
         var code = $("#id_code_input").val();
+        if (validateVerifyCode(code) == false) {
+          return;
+        }
         var url = "/weixin/verifycode/"+code+"/";
         var callback = function (res) {
           if (res["code"] == "bad") {
