--- a/shopmanager/shopapp/weixin/templates/weixin/remind.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/remind.html
@@ -65,13 +65,25 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript">
+      function validateMobile(s) {
+        var validateReg = /^((\+?86)|(\(\+86\)))?1\d{10}$/;
+        return validateReg.test(s);
+      };
+      function validateVerifyCode(s) {
+        var validateReg = /^\d{6}$/;
+        return validateReg.test(s);
+      };
+
       function requestcode() {
         var btn = $("#id_requestcode_button");
         if (btn.attr("status") == "1") {
           return;
         }
-        console.log(btn);
+
         var mobile = $("#id_mobile_input").val();
+        if (validateMobile(mobile) == false) {
+          return;
+        }
         var url = "/weixin/requestcode/"+mobile+"/";
 
         var callback = function (res) {
@@ -81,6 +93,10 @@
       };
       function verifycode() {
         var code = $("#id_code_input").val();
+        if (validateVerifyCode(code) == false) {
+          return;
+        }
+
         var url = "/weixin/verifycode/"+code+"/";
         var callback = function (res) {
           console.log(res);
